// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldName renders a geo field, useShortDots is set to true 1`] = `
<span
  class="dscField--noResults"
  title="Geo point field"
>
  <svg
    aria-hidden="true"
    aria-label="Geo point field"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
  <span
    class="dscFieldName"
  >
    t.t.test
  </span>
</span>
`;

exports[`FieldName renders a number field by providing a field record, useShortDots is set to false 1`] = `
<span
  class=""
  title="Number field"
>
  <svg
    aria-hidden="true"
    aria-label="Number field"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
  <span
    class="dscFieldName"
  >
    test.test.test
  </span>
</span>
`;

exports[`FieldName renders a string field by providing fieldType and fieldName 1`] = `
<span
  class=""
  title="String field"
>
  <svg
    aria-hidden="true"
    aria-label="String field"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
  <span
    class="dscFieldName"
  >
    test
  </span>
</span>
`;
